app/assets/stylesheets/puzzletime.scss
@import "bootstrap-sprockets";
@import "bootstrap_variables";
@import "bootstrap";
@import "mixins";

p {
  text-align: justify;
}

div {
  text-align: justify;
}

label.required::after{
content: " *"
}

a.symbol {
  text-decoration: none;
  font-weight: bold;
  font-size: 16px;
}

#content {
  @extend .container-fluid;
  margin-bottom: 40px;
  padding-left: $grid-gutter-width;
  padding-right: $grid-gutter-width;
}

.unindented {
  margin-left: -$grid-gutter-width;
  margin-right: -$grid-gutter-width;
}

.nav-tabs.nav-center > li, .nav-pills.nav-center > li {
  float:none;
  display:inline-block;
  *display:inline; /* ie7 fix */
  zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs.nav-center, .nav-pills.nav-center {
  text-align:center;
}

.nav-tabs > li > a {
  color: $gray;

  &:hover {
    color: $gray-darker;
  }
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover, {
  color: $gray-darker;
}

th {
  color: #000;
  font-weight: 400;
}
th.periodHead {
    text-align:     right;
}
th.nowrap {
  white-space: nowrap;
}

#evaluation td {
  white-space: nowrap;
}

.btn + .cancel {
  margin-left: 10px;
}

.times_total_sum {
  font-weight:    bold;
  /* color: #f4a460; */
  padding-top:    10px;
  padding-bottom: 20px;
  white-space:    nowrap;
}

.notification {
  border: 2px solid #C9D8FF;
  background-color: #f0f0f0;
  margin: 0;
  margin-top: -16px;
  margin-bottom: 10px;
  padding: 2px;
}

.notification li {
  margin-left: 20px;
}

a.tooltip {
  font-weight: bolder;
  text-decoration: none;
}

a.tooltip span {
  display: none;
}

a.tooltip:hover {
  position: relative;
}

a.tooltip:hover span {
  display: block;
  position: absolute;
  top: 10px;
  left: 10px;
  z-index: 3;
  background: #ffffdd;
  color: #333;
  white-space: nowrap;
  padding: 1pt;
  border: 1px solid #ddd;
  font-weight: normal;
  float: left;
  text-align: left;
}

.calendar {
  margin-left: 5px;
}

.selectize-option {
  text-align: left;

  .shortname, .name {
    display: inline-block;
    line-height: 25px;
    vertical-align: middle;
  }
  .shortname {
    font-weight: bold;
    margin-right: 10px;
  }
  .name {
    float: right;
  }
  .description {
    font-size: 11px;
  }
}

.right {
  text-align: right;
}

.center {
  text-align: center;
}

.list-search {
  margin-top: 20px;
  margin-bottom: 20px;
  width: 500px;
}

.disabled {
  color: $btn-link-disabled-color;
}

.red {
  color: $brand-danger;
}

.green {
  color: $brand-success;
}

.orange {
  color: $brand-warning;
}

.tooltip p {
  margin-bottom: 0;
}

a.action {
  margin-right: 50px;
}

a.disabled:hover {
  cursor: default;
  text-decoration: none;
  color: $btn-link-disabled-color;
}

table.table td.action {
  width: 20px;
  text-align: center;
  white-space: nowrap;
}

.table-responsive {
  width: 100%;
  margin-bottom: 15px;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border: 1px solid $gray-light;

  table {
    border: none;
  }
}

.table {
  thead {
    border-top: 1px solid $table-border-color;
    background-color: $gray-lighter;

    th, a {
      color: $gray;
    }

    tr > th {
      border-bottom: 0;
    }

    a {
      text-decoration: none;

      &:active, &:hover {
        color: #000;
      }
    }
  }

  > thead > tr > th,
  > tbody > tr > td {

    &:first-child {
      padding-left: 30px;
    }
    &:last-child {
      padding-right: 30px;
    }
  }

  /* Generic cell content styles */
  .title {
    font-size: 18px;
    font-weight: 400;
  }
  .muted {
    color: $gray;
  }

  p {
    margin: 0;
  }
}

.form-action {
  @extend .form-control;
  width: auto;
  border: 0;
  box-shadow: none;
  margin-bottom: 15px;
}

#content > .nav-tabs {
  margin-bottom: $line-height-computed * 2;
}
#content > .form-horizontal {
  margin-top: $line-height-computed * 2;
}

footer {
  clear: both;
}

body.loading,
body.loading a:hover {
  cursor: progress !important;
}

[data-row-link] tbody tr td {
  cursor: pointer;

  &.no-link {
    cursor: default ;
  }
}

@import "components/form";
@import "components/nav_tabs";
@import "components/table";

@import "absence";
@import "graph";
@import "header";
@import "worktimes";
@import "orders";
@import "order_comments";
@import "icons";

